fix: fix style on vendas form

--- a/src/containers/Vendas/Form/styles.scss
+++ b/src/containers/Vendas/Form/styles.scss
@@ -2,4 +2,11 @@
 	.addMore{
 		cursor: pointer;
 	}
+	&__close-button{
+		> i {
+			cursor: pointer;
+		}
+		display: inline-flex;
+		align-items: center;
+	}
 }
